framec_tests/language_specific/rust/v3_mir/positive/inside_nested_block_comment_transition_ignored.frm
@target rust

system S {
    machine:
        $A {
            e() {
                /* outer /* inner with -> $B() and => $^ */ still comment */
                native();
            }
        }
}

