framec_tests/language_specific/rust/v3_mir/negative/transition_block_comment_across_then_native.frm
@target rust

system S {
    machine:
        $A {
            e() {
                -> $B() /* start
                   still comment
                   */ native();
            }
        }
}
